resilience-demo/k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaky-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaky-service
  template:
    metadata:
      labels:
        app: flaky-service
    spec:
      containers:
      - name: flaky-service
        image: us-central1-docker.pkg.dev/project-d1a95002-78b0-493b-b7e/resilience-repo/flaky-service:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flaky-service
spec:
  selector:
    app: flaky-service
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: us-central1-docker.pkg.dev/project-d1a95002-78b0-493b-b7e/resilience-repo/frontend:0.1
        ports:
        - containerPort: 8080
