resilience-demo/k8s/istio-cb.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: flaky-cb
spec:
  host: flaky-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
