resilience-demo/k8s/istio-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flaky-timeout
spec:
  hosts:
  - flaky-service
  http:
  - timeout: 1s
    route:
    - destination:
        host: flaky-service
